--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/font-awesome/css/font-awesome.min.css"
             ],
             "scripts": []
           },
@@ -55,6 +56,14 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
             }
           }
         },
@@ -66,6 +75,10 @@
           "configurations": {
             "production": {
               "browserTarget": "brain-frontend:build:production"
+            },
+            "hmr": {
+              "hmr": true,
+              "browserTarget": "brain-frontend:build:hmr"
             }
           }
         },
