--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~7.0.0",
     "angular-particle": "^1.0.4",
     "core-js": "^2.5.4",
+    "dropzone": "^5.5.1",
     "font-awesome": "^4.7.0",
+    "fuse.js": "^3.3.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
