--- a/angular.json
+++ b/angular.json
@@ -71,8 +71,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "brain-frontend:build",
-            "proxyConfig": "proxy.conf.json"
+            "browserTarget": "brain-frontend:build"
           },
           "configurations": {
             "production": {
