--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dropzone": "^5.5.1",
     "font-awesome": "^4.7.0",
     "fuse.js": "^3.3.0",
+    "lodash": "^4.17.15",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
