--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "styles": [
               "src/styles.scss",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/dropzone/dist/min/dropzone.min.css"
+              "node_modules/dropzone/dist/min/dropzone.min.css",
+              "node_modules/@cuttleai/visualizations/lib/style.module.css"
             ],
             "scripts": []
           },
